# secret-santa-cli

./: .gitignore  AUTHORS.md  CHANGELOG.md  README.md  example.env  main.py  pyproject.toml
santa/: __init__.py  draws.py  models.py  notifications.py
src/secretsanta/: __init__.py  __main__.py  cli.py  draws.py  models.py  notifications.py
src/secretsanta/templates/: notification.html
