[project]
name = "secretsanta"
version = "0.1.0"
description = "A Secret Santa game CLI tool."
readme = "README.md"
authors = [{ name = "Marcos Gabarda", email = "hey@marcosgabarda.com" }]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.0",
    "jinja2>=3.1.4",
    "pydantic-settings>=2.7.0",
    "pydantic>=2.10.3",
    "pyyaml>=6.0.2",
]
license = { text = "MIT License" }

[project.scripts]
secretsanta = "secretsanta.cli:app"

[dependency-groups]
dev = ["ruff>=0.8.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint.pydocstyle]
convention = "pep257"
